<resources>
    <string name="app_name">CHESS</string>
    <string name="home">首页</string>
    <string name="news">消息</string>
    <string name="signin">签到</string>
    <string name="settings">设置</string>
    <string name="resume">我的简历</string>
    <string name="attendance">我的考勤</string>
    <string name="search">搜索</string>
    <string name="empty_image">empty_image</string>
    <string name="time">2015/01/04 05:23</string>
    <string name="username">小小, 嘿嘿</string>
    <string name="last_message">Hi, Whats up</string>
    <string name="nochat">此设备车暂无会话记录</string>
    <string name="back">返回</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="mobile">手机</string>
    <string name="address">居住地址</string>
    <string name="notification">人事活动</string>
    <string name="chat_record">聊天记录</string>
    <string name="select_language">语言选择</string>
    <string name="feedback">意见与反馈</string>
    <string name="about">关于</string>
    <string name="logout">退出当前帐号</string>
    <string name="turnedon">已开启</string>
    <string name="turnedoff">关掉</string>
    <string name="notification_comment">在Android的“设置”-“通知”中找到“今目标”进行修改</string>
    <string name="sound_alert">声音提示</string>
    <string name="vibrate_alert">震动提示</string>
    <string name="delete_chatrecord">清除聊天记录</string>
    <string name="feedback_hint">为了第一时间帮助您解决问题，建议您留下邮箱或QQ号，今目标感谢有您一路相伴。</string>
    <string name="send">发送</string>
    <string name="department">人力资源部</string>
    <string name="email">132245@show.com</string>
    <string name="position">职位</string>
    <string name="main_info">基本信息</string>
    <string name="contact_info">合同信息</string>
    <string name="personal_action">人事活动</string>
    <string name="education_info">教育经历</string>
    <string name="work_experience">工作经历</string>
    <string name="traing_experience">培训经历</string>
    <string name="grade_title">职称等级</string>
    <string name="skill_level">技能等级</string>
    <string name="week1">周日</string>
    <string name="week2">周一</string>
    <string name="week3">周二</string>
    <string name="week4">周三</string>
    <string name="week5">周四</string>
    <string name="week6">周五</string>
    <string name="week7">周六</string>

    <!-- Month Year Picker -->
    <string name="alert_dialog_title">请选择</string>
    <string name="positive_button_text">确定</string>
    <string name="negative_button_text">取消</string>

    <!-- Language -->
    <string name="simple_chinese">简体中文</string>
    <string name="english">英语</string>

    <!-- Login -->
    <string name="user_id">用户名</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login">登录</string>

    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_keyboard_backspace">&#xe0c9;</string>
    <string name="ic_keyboard_capslock">&#xe0ca;</string>
    <string name="ic_keyboard_control">&#xe0cb;</string>
    <string name="ic_keyboard_hide">&#xe0cc;</string>
    <string name="ic_keyboard_return">&#xe0cd;</string>
    <string name="ic_keyboard_tab">&#xe0ce;</string>
    <string name="ic_keyboard_voice">&#xe0cf;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_laptop">&#xe0d4;</string>
    <string name="ic_drive_file">&#xe077;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_toggle_colors">Color Picker</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save Sketch</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>

    <string name="about_markers">For something more full featured, check out Markers.</string>
    <string name="about_sketch_version">Sketch 1.3</string>
    <string name="about_credits">by Matt Marchany</string>

    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_dark_gray">Dark Gray</string>
    <string name="color_dark_green">Dark Green</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_light_blue">Light Blue</string>
    <string name="color_light_gray">Light Gray</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_orange">Orange</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>

    <string name="dialog_clear_title">删除</string>
    <string name="dialog_clear_message">删除草图？</string>
    <string name="dialog_color_title">选择颜色</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">没有</string>

    <string name="toast_clear">草图清除。</string>
    <string name="toast_color">颜色的变化。</string>

    <!-- 云信SDK所需文案 -->
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>

    <!-- location -->
    <string name="location_init_map_error">初始化地图服务失败</string>
    <string name="location_navigate">导航</string>
    <string name="self_location">我在这个位置</string>
    <string name="location_unable_to_get_you">暂时无法获取您的位置</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>

    <!-- session -->
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_skech">画 板</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>

    <!-- 群 -->
    <string name="create_team_activity">创建群聊</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="msg_notice">消息提醒</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>

    <!-- 阅后即焚 -->
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="snapchat_title">阅后即焚</string>

</resources>
