<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFEFEF"
    android:clickable="true">

    <include
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        layout="@layout/title_bar_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#e9e9e9"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/turnedon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/notification"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notification_comment"
            android:background="#e9e9e9"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/sound_alert"/>

            <com.app.hrms.widget.switchbutton.SwitchButton
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                rsb:animationVelocity="8"
                rsb:measureFactor="1.5"
                rsb:offDrawable="@drawable/ios_switch_off"
                rsb:onColor="#4cd864"
                rsb:thumbDrawable="@mipmap/ios_switch_thumb"
                rsb:thumb_marginBottom="-8dp"
                rsb:thumb_marginLeft="-5dp"
                rsb:thumb_marginRight="-5dp"
                rsb:thumb_marginTop="-2.5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="1dp"
            android:background="@color/white"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/white">

            <com.app.hrms.widget.switchbutton.SwitchButton
                android:id="@+id/vibration_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                rsb:animationVelocity="8"
                rsb:measureFactor="1.5"
                rsb:offDrawable="@drawable/ios_switch_off"
                rsb:onColor="#4cd864"
                rsb:thumbDrawable="@mipmap/ios_switch_thumb"
                rsb:thumb_marginBottom="-8dp"
                rsb:thumb_marginLeft="-5dp"
                rsb:thumb_marginRight="-5dp"
                rsb:thumb_marginTop="-2.5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/vibrate_alert"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
